# UOFastORM

./: .gitignore  README.md  __init__.py  orm_class_generator.py  pyproject.toml  uofast_named_fields.py  uofast_orm.py
uofast_orm/: __init__.py  core.py  generator.py  named_fields.py
