[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uofast-orm"
version = "1.1.0"
description = "Simple ORM for U2 Unidata databases"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["unidata", "u2", "uopy", "orm", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "uopy",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.scripts]
uofast-generate = "uofast_orm.generator:main"

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/UOFastORM"
Repository = "https://github.com/YOUR_GITHUB_USERNAME/UOFastORM"
Issues = "https://github.com/YOUR_GITHUB_USERNAME/UOFastORM/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["uofast_orm*"]
exclude = ["tests*"]
